--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/*  *,
-*::before,
-*::after {
-  box-sizing: border-box;
-}*/
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -13,7 +8,6 @@ h1,
 h2,
 h3,
 p {
-  max-width: 0;
   margin: 0;
 }
 
@@ -48,6 +42,8 @@ h3 {
 
 img {
   display: block;
+  height: auto;
+  max-width: 100%:
 }
 
 .section {
@@ -55,23 +51,22 @@ img {
 }
 /*=======================Header=========================*/
 .header {
+  background: #ffffff;
   border-bottom: 1px solid #e7e9fc;
-  margin-bottom: 490px;
 }
 
 .header-container {
   display: flex;
   align-items: center;
-}
-
-.header {
-  background: #ffffff;
   justify-content: space-between;
+  flex-direction: row;
 }
 
 .header-nav {
   display: flex;
   align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -103,7 +98,6 @@ img {
   align-items: center;
   gap: 40px;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 .nav-item {
   display: flex;
@@ -130,9 +124,12 @@ img {
 .header-contacts-list {
   display: flex;
   align-items: center;
+  flex-direction: row;
   gap: 40px;
 }
-
+.header-contacts-items {
+  padding: 24px 0;
+}
 .header-contacts-list,
 .header-contacts-items,
 .contacts-link {
@@ -151,9 +148,9 @@ img {
 .hero {
   font-weight: 700;
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .hero .container {
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -161,12 +158,14 @@ img {
 }
 
 .hero-title {
-  margin-right: 76px;
   font-size: 56px;
   line-height: 107%;
   letter-spacing: 0.02em;
   max-width: 496px;
   text-align: center;
+  margin-bottom: 48px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .order-button {
@@ -179,6 +178,8 @@ img {
   cursor: pointer;
   background-color: #4d5ae5;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .order-button:hover,
 .order-button:focus {
@@ -204,14 +205,20 @@ img {
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: flex;
+  justify-content: space-around;
+  column-gap: 24px;
 }
-
+.feauter-item {
+  width: calc((100% - 72px) / 4);
+}
 .feauter-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 15px 0;
 }
 
 .feauter-text {
@@ -235,10 +242,21 @@ img {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  max-width: 170px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 8px 0;
 }
-
+.team-list {
+  display: flex;
+  gap: 24px;
+}
 .team-item {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .team-image {
@@ -251,6 +269,7 @@ img {
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 30px 15px 8px;
 }
 
 .team-text {
@@ -259,6 +278,7 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
+  padding: 0 15px 30px;
 }
 
 /*==================Section 4 - Portfolio=======================*/
@@ -270,7 +290,10 @@ img {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
-  max-width: 218px;
+  max-width: 250px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .portfolio-list {
@@ -280,7 +303,6 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
@@ -309,6 +331,7 @@ img {
 /*=========================Footer==================================*/
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .footer-logo {
@@ -319,6 +342,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  
 }
 
 .footer-logo-part {
@@ -331,4 +355,6 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
+  padding-top: 16px;
 }
