--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,10 @@ img {
   color: #ffffff;
   cursor: pointer;
   background-color: #4d5ae5;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -216,7 +220,7 @@ img {
   color: #2e2f42;
   display: flex;
   justify-content: space-around;
-  column-gap: 24px;
+  gap: 24px;
 }
 
 .feauter-item {
@@ -230,6 +234,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 15px 0;
+  margin-bottom: 8px;
 }
 
 .feauter-text {
@@ -276,13 +281,19 @@ img {
   max-width: 100%;
 }
 
+.team-card {
+  padding: 32px 0;
+  text-align: center;
+  
+}
+
 .team-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding: 30px 15px 8px;
+  margin-bottom: 8px;
 }
 
 .team-text {
@@ -291,7 +302,6 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
-  padding: 0 15px 30px;
 }
 
 /*==================Section 4 - Portfolio=======================*/
@@ -321,6 +331,12 @@ img {
   row-gap: 48px;
 }
 
+.portfolio-card {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none; 
+}
+
 .portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -330,6 +346,7 @@ img {
   padding: 32px 16px 8px 16px;
   justify-content: flex-start;
   max-width: 360px;
+  margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -355,6 +372,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
   
 }
 
@@ -369,5 +388,4 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-  padding-top: 16px;
 }
